--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "faker": "^5.5.3",
     "mongoose": "^6.0.13",
     "uuid": "^8.3.2"
